# stadium-copilot-ai

./: .gitignore  CREDENTIALS.md  LICENSE  README.md  fix_and_weather.py  fix_backend.py  fix_backend2.py  fix_task.py  fix_ts.py  fix_ts2.py  fix_warnings.py  package-lock.json  package.json  scaffold.py  scaffold_front.py  search_results.txt  setup_backend.py  setup_models.py  wrap_layouts.py
backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.db  test_script.db
backend/alembic/: env.py
backend/alembic/versions/: 894358647edc_initial_migration.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routers/: api_router.py  auth.py  crowd.py  incident.py  match.py  notification.py  stadium.py  task.py  weather.py  zone.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  ai.py  match.py  operations.py  stadium.py  tasks.py  user.py
backend/app/repositories/: base.py  crowd.py  incident.py  match.py  notification.py  stadium.py  task.py  zone.py
backend/app/schemas/: crowd.py  incident.py  match.py  notification.py  stadium.py  task.py  user.py  zone.py
backend/app/services/: weather.py
backend/stadium_copilot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py
backend/tests/api/: test_auth.py  test_operational.py
src/app/: globals.css  not-found.tsx  page.tsx
stadium-copilot-ai/: AGENTS.md  package-lock.json  package.json
stitch-screens/: fan.html  landing.html  login.html  organizer.html  role.html
(+110 files in other folders)
